--- a/lucky2/AndroidManifest.xml
+++ b/lucky2/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.lucky"
+    package="com.minas.lucky"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -15,7 +15,7 @@
         android:theme="@android:style/Theme.DeviceDefault" >
 
         <activity
-            android:name="com.example.lucky.MainActivity"
+            android:name="com.minas.lucky.MainActivity"
             android:label="@string/app_name"
             android:icon="@drawable/ic_launcher">
             <intent-filter>
