--- a/lucky-my/AndroidManifest.xml
+++ b/lucky-my/AndroidManifest.xml
@@ -13,17 +13,22 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.DeviceDefault" >
-
         <activity
-            android:name="com.test.mylucky.MainActivity"
-            android:label="@string/app_name"
-            android:icon="@drawable/ic_launcher">
+            android:name="com.test.mylucky.MyActivity"
+            android:icon="@drawable/ic_launcher"
+            android:label="@string/app_name" >
             <intent-filter>
-                <action
-                    android:name="com.google.android.glass.action.VOICE_TRIGGER" />
+                <action android:name="com.google.android.glass.action.VOICE_TRIGGER" />
             </intent-filter>
-            <meta-data android:name="com.google.android.glass.VoiceTrigger"
+
+            <meta-data
+                android:name="com.google.android.glass.VoiceTrigger"
                 android:resource="@xml/voice_trigger" />
+        </activity>
+        <activity
+            android:name="com.test.mylucky.CardActivity"
+            android:icon="@drawable/ic_launcher"
+            android:label="@string/app_name" >
         </activity>
     </application>
 
