--- a/lucky-my/AndroidManifest.xml
+++ b/lucky-my/AndroidManifest.xml
@@ -30,6 +30,12 @@
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name" >
         </activity>
+
+        <service
+            android:name="com.test.mylucky.LiveCardService"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
     </application>
 
 </manifest>
