--- a/luckyLive/AndroidManifest.xml
+++ b/luckyLive/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@android:style/Theme.DeviceDefault" >
 
         <activity
-            android:name="com.example.luckyLive.MainActivity"
+            android:name="com.example.luckyLive.luckyActivity"
             android:label="@string/app_name"
             android:icon="@drawable/ic_launcher">
             <intent-filter>
