--- a/lucky-my/AndroidManifest.xml
+++ b/lucky-my/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.DeviceDefault" >
         <activity
-            android:name="com.test.mylucky.MyActivity"
+            android:name="com.test.mylucky.MainActivity"
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name" >
             <intent-filter>
@@ -28,7 +28,8 @@
         <activity
             android:name="com.test.mylucky.CardActivity"
             android:icon="@drawable/ic_launcher"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/MenuTheme" >
         </activity>
 
         <service
