--- a/htigran/AndroidManifest.xml
+++ b/htigran/AndroidManifest.xml
@@ -31,5 +31,5 @@
             android:label="@string/app_name" >
         </activity>
     </application>
-
+	<uses-permission android:name="android.permission.CAMERA"></uses-permission>
 </manifest>
