--- a/TumoGame/AndroidManifest.xml
+++ b/TumoGame/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:targetSdkVersion="15" />
 
     <application
+        android:name=".TumoGameApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
