--- a/ReminderDemo/AndroidManifest.xml
+++ b/ReminderDemo/AndroidManifest.xml
@@ -15,22 +15,16 @@
         android:theme="@android:style/Theme.DeviceDefault" >
            
         <activity
-            android:name="com.test.mylucky.ReminderStart">	
-            
-            <intent-filter>
-       			<action android:name="com.google.android.glass.action.VOICE_TRIGGER" />
-       		</intent-filter>
-       		<meta-data
-       			android:name="com.google.android.glass.VoiceTrigger"
-        		android:resource="@xml/voice_trigger">
-       		</meta-data>
-       		
+            android:name="com.test.mylucky.DeleteCard">
         </activity>
-
-        <service
-            android:name="com.test.mylucky.ReminderService"
-            android:enabled="true"
-            android:exported="true" >
+        
+        <service android:name="com.test.mylucky.ReminderService">
+        	<intent-filter>
+                <action
+                    android:name="com.google.android.glass.action.VOICE_TRIGGER" />
+            </intent-filter>
+            <meta-data android:name="com.google.android.glass.VoiceTrigger"
+                android:resource="@xml/voice_trigger" />
         </service>
         
     </application>
